--- a/JenkinsFile
+++ b/JenkinsFile
@@ -15,6 +15,9 @@ pipeline {
     stage('Build and Test') {
       steps {
         sh 'ls -ltr'
+        sh 'java -version'
+        sh 'echo $JAVA_HOME'
+
         // build the project and create a JAR file
         sh 'mvn clean package'
       }
