--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,10 +1,11 @@
 pipeline {
   agent {
     docker {
-      image 'maven:3.9.2-eclipse-temurin-17'
-      args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
+      image 'abhishekf5/maven-abhishek-docker-agent:v1'
+      args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
     }
-  }
+    }
+  
   stages {
     stage('Checkout') {
       steps {
