--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,29 +1,29 @@
 pipeline {
-  agent {
-    docker {
-      image 'abhishekf5/maven-abhishek-docker-agent:v1'
-      args '--user root -v /var/run/docker.sock:/var/run/docker.sock' // mount Docker socket to access the host's Docker daemon
-    }
-    }
-  
+  agent any
   stages {
     stage('Checkout') {
       steps {
         sh 'echo passed'
-        //git branch: 'main', url: 'https://github.com/iam-veeramalla/Jenkins-Zero-To-Hero.git'
       }
     }
     stage('Build and Test') {
+      agent {
+        docker {
+          image 'maven:3.9.2-eclipse-temurin-17'
+          args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
+        }
+      }
       steps {
-        sh 'ls -ltr'
-        sh 'java -version'
-        sh 'echo $JAVA_HOME'
-
-        // build the project and create a JAR file
         sh 'mvn clean package'
       }
     }
     stage('Static Code Analysis') {
+      agent {
+        docker {
+          image 'maven:3.9.2-eclipse-temurin-17'
+          args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
+        }
+      }
       environment {
         SONAR_URL = "http://34.47.161.188:9000"
       }
@@ -34,11 +34,16 @@ pipeline {
       }
     }
     stage('Build and Push Docker Image') {
-      environment {
-        DOCKER_IMAGE = "saisudhag01/application_images:${BUILD_NUMBER}"
-        // DOCKERFILE_LOCATION = "java-maven-sonar-argocd-helm-k8s/spring-boot-app/Dockerfile"
-        REGISTRY_CREDENTIALS = credentials('docker-cred')
+      steps {
+        script {
+          sh 'docker build -t ${DOCKER_IMAGE} .'
+          sh 'docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD'
+          sh 'docker push ${DOCKER_IMAGE}'
+        }
       }
+    }
+
+
       steps {
         script {
             sh 'docker build -t ${DOCKER_IMAGE} .'
@@ -48,7 +53,7 @@ pipeline {
             }
         }
       }
-    }
+    
     stage('Update Deployment File') {
         environment {
             GIT_REPO_NAME = "CI-CD-implementation"
@@ -70,3 +75,4 @@ pipeline {
     }
   }
 }
+
