--- a/JenkinsFile
+++ b/JenkinsFile
@@ -7,12 +7,10 @@ pipeline {
       }
     }
     stage('Build and Test') {
-      agent {
-        docker {
-          image 'maven:3.9.2-eclipse-temurin-17'
-          args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
-        }
-      }
+      steps {
+        sh 'mvn clean package'
+      }  
+    }
       steps {
         sh 'mvn clean package'
       }
