--- a/JenkinsFile
+++ b/JenkinsFile
@@ -10,6 +10,7 @@ pipeline {
     stage('Checkout') {
       steps {
         sh 'echo passed'
+        git branch: 'main', url: 'https://github.com/Saisudhag01/starter-project.git'
       }
     }
     stage('Build and Test') {
